# NewBest

./: BaseScaff.cxx  BaseScaff.hxx  Baustellen\DB.txt  CMakeLists.txt  GT100.code-workspace  Log.txt  Logger.cxx  Logger.hxx  Makefile  Menus.cxx  Menus.hxx  Scaff  Scaff.code-workspace  Utilities.cxx  Utilities.hxx  log.txt  main.cpp  test.txt  testcases.txt  umlaute.h  valgrind.rpt
Baustellen/: DB.txt
src/: BaseScaff.cxx  Logger.cpp  Menus.cxx  Utilities.cxx
src/lib/: BaseScaff.hxx  FacadeScaff.hxx  Menus.hxx  Utilities.hxx  umlaute.h
